# sentinel

./: .env.example  .gitignore  CLAUDE.md  DECISION_LOG.md  DEPLOYMENT.md  Makefile  README.md  STEPS.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: config.py  database.py  main.py
apps/api/src/migrations/: 001_initial.sql
apps/api/src/models/: order.py  user.py  watch.py
apps/api/src/routers/: auth.py  orders.py  sse.py  watches.py  webhooks.py
apps/api/src/schemas/: order.py  watch.py
apps/api/src/services/: agent.py  auth.py  mock_skyfi.py  publisher.py  skyfi_client.py
apps/api/tests/: test_health.py
apps/web/: Dockerfile  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/watches/[id]/: page.tsx
apps/web/src/app/watches/new/: page.tsx
apps/web/src/components/: AoiMap.tsx  AuthGuard.tsx  NavBar.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useOrderStream.ts
apps/web/src/lib/: api.ts  utils.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/: worker.py
helm/sentinel/: Chart.yaml  values.eks.yaml  values.gke.yaml  values.yaml
helm/sentinel/templates/: _helpers.tpl  api.yaml  namespace.yaml  postgres.yaml  rabbitmq.yaml  web.yaml  worker.yaml
k8s/: api.yaml  ingress.yaml  postgres.yaml  rabbitmq.yaml  secrets.yaml.example  web.yaml  worker.yaml
scripts/: seed.py
